# Pairly

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.web  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  migrate-check.yml  restore-drill.yml
backend/: README.md
backend/pairly/: __init__.py  config.py  main.py
backend/tests/: conftest.py  test_admin.py  test_ai_client.py  test_api_schema.py  test_auth_hmac.py  test_build_in_docker.py  test_caddy_hardening.py  test_conftest_schema.py  test_date_idea.py  test_deploy_scripts_hardening.py  test_dev_auth_guard.py  test_forward_capture.py  test_gifts.py  test_love_notes.py  test_main_startup.py  test_me.py  test_migration_autocommit.py  test_notify.py  test_pair_flow.py  test_pair_scoping.py  test_parse.py  test_qotd_archive.py  test_qotd_reveal_gate.py  test_qotd_rotation.py  test_repo_caps.py  test_repos_scoping.py  test_text_grapheme.py  test_timezone_plumbing.py  test_two_tap.py  test_unpair_flow.py  test_wire_format.py  test_wishlist_archive.py  test_wishlist_limit.py  test_wishlist_transitions.py
deploy/: .env.prod.example
deploy/caddy/: Caddyfile  Caddyfile.docker
deploy/scripts/: backup.sh  deploy.sh  (+3 more)
docs/: FEATURE_ROADMAP.md  backup.md  deploy-docker.md  open-decisions.md  product-brief.md  roadmap.md  runbook.md
e2e/: .env.example  README.md  m3-screenshots.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
miniapp/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
(+189 files in other folders)
